--- a/gis_forge/pyproject.toml
+++ b/gis_forge/pyproject.toml
@@ -3,9 +3,9 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "glyph_forge"
+name = "gis_forge"
 version = "0.1.0"
-description = "Eidosian Glyph Forge - Image to ASCII/ANSI Converter."
+description = "Eidosian GIS Forge - Global Information System & Configuration."
 readme = "README.md"
 requires-python = ">=3.12"
 license = "MIT"
@@ -13,7 +13,7 @@ authors = [
     { name = "Lloyd Handyside", email = "ace1928@gmail.com" },
     { name = "Eidos", email = "syntheticeidos@gmail.com" },
 ]
-keywords = ["ascii-art", "ansi", "image-processing", "pillow"]
+keywords = ["config", "settings", "registry", "pubsub"]
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
@@ -21,10 +21,7 @@ classifiers = [
     "Programming Language :: Python :: 3.12",
 ]
 dependencies = [
-    "pillow>=9.0.0",
-    "numpy>=1.26.0",
-    "rich>=13.0.0",
-    "typer>=0.9.0",
+    "pydantic>=2.6.0",
 ]
 
 [project.optional-dependencies]
@@ -32,11 +29,8 @@ dev = [
     "pytest>=8.0.0",
 ]
 
-[project.scripts]
-glyph-forge = "glyph_forge.cli:main"
-
 [tool.hatch.build.targets.wheel]
-packages = ["src/glyph_forge"]
+packages = ["."]
 
 [tool.pytest.ini_options]
 minversion = "6.0"
