--- a/ollama_forge/pyproject.toml
+++ b/ollama_forge/pyproject.toml
@@ -1,72 +1,39 @@
-# 🌀 Pyproject with Eidosian harmony – universal and adaptive! 🌍
-
 [build-system]
-requires      = [ "setuptools>=61.0.0", "wheel>=0.37.0" ]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
-# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
-# 📦 Project Core - Single Source of Truth
-# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 [project]
 name = "ollama_forge"
-version = "0.1.0" # AUTO-MANAGED
-description = "Eidosian ollama forge repository"
+version = "0.1.0"
+description = "Eidosian Ollama Forge - Python Client for Ollama."
 readme = "README.md"
-authors = [
-  { name = "Lloyd Handyside", email = "ace1928@gmail.com" },
-  { name = "Eidos", email = "syntheticeidos@gmail.com" },
-]
 requires-python = ">=3.12"
-license = { text = "MIT" }
-
-dependencies = [  ]
-
-[project.urls]
-Homepage      = "https://github.com/Ace1928/ollama_forge"
-Documentation = "https://ollama_forge.readthedocs.io"
-Organization  = "https://neuroforge.io"
-"Bug Tracker" = "https://github.com/Ace1928/ollama_forge/issues"
-"Source Code" = "https://github.com/Ace1928/ollama_forge"
-Changelog     = "https://github.com/Ace1928/ollama_forge/blob/main/CHANGELOG.md"
+license = "MIT"
+authors = [
+    { name = "Lloyd Handyside", email = "ace1928@gmail.com" },
+    { name = "Eidos", email = "syntheticeidos@gmail.com" },
+]
+keywords = ["llm", "ollama", "client", "ai"]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3.12",
+]
+dependencies = [
+    "httpx>=0.26.0",
+    "pydantic>=2.6.0",
+]
 
 [project.optional-dependencies]
 dev = [
-  "black",
-  "isort",
-  "flake8",
-  "mypy",
-  "pytest",
-  "pytest-cov",
-  "build",
-  "twine",
-]
-docs = [
-  "sphinx>=8.2.3",
-  "furo>=2024.8.6",
-  "sphinx-rtd-theme>=3.0.2",
-  "myst-parser>=4.0.1",
-  "sphinxcontrib-plantuml>=0.2.0",
-  "sphinxcontrib-mermaid>=0.1.0",
-  "sphinx-autoapi>=3.0.0",
-  "sphinx-copybutton>=0.5.2",
-  "sphinx-autodoc-typehints>=3.1.0",
-  "sphinx-autobuild>=2024.10.3",
-  "sphinx-design>=0.6.1",
+    "pytest>=8.0.0",
 ]
 
-[tool.black]
-line-length    = 88
-target-version = [ "py312" ]
-
-[tool.isort]
-profile     = "black"
-line_length = 88
-
-[tool.mypy]
-python_version        = "3.12"
-warn_return_any       = true
-disallow_untyped_defs = true
+[tool.hatch.build.targets.wheel]
+packages = ["src/ollama_forge"]
 
 [tool.pytest.ini_options]
-testpaths    = [ "tests" ]
-python_files = "test_*.py"
+minversion = "6.0"
+addopts = "-ra -q"
+testpaths = ["tests"]
