--- a/game_forge/pyparticles/pyproject.toml
+++ b/game_forge/pyparticles/pyproject.toml
@@ -19,8 +19,19 @@ classifiers = [
 dependencies = [
     "numpy>=1.24.0",
     "pygame>=2.5.0",
+    "pygame_gui>=0.6.9",
     "numba>=0.57.0",
     "scipy>=1.10.0",
+    "moderngl>=5.8.0",
+]
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=7.0.0",
+    "pytest-cov>=4.0.0",
+    "pytest-benchmark>=4.0.0",
+    "line-profiler>=4.0.0",
+    "memory-profiler>=0.60.0",
 ]
 
 [project.scripts]
