--- a/game_forge/pyparticles/requirements.txt
+++ b/game_forge/pyparticles/requirements.txt
@@ -3,4 +3,9 @@ pygame>=2.5.0
 pygame_gui>=0.6.9
 numba>=0.57.0
 scipy>=1.10.0
+moderngl>=5.8.0
 pytest>=7.0.0
+pytest-cov>=4.0.0
+pytest-benchmark>=4.0.0
+line-profiler>=4.0.0
+memory-profiler>=0.60.0
