--- a/.gitattributes
+++ b/.gitattributes
@@ -7,4 +7,5 @@
 *.zip filter=lfs diff=lfs merge=lfs -text
 *.7z filter=lfs diff=lfs merge=lfs -text
 *.bin filter=lfs diff=lfs merge=lfs -text
+*.json filter=lfs diff=lfs merge=lfs -text
 .graphrag_index/*.json filter=lfs diff=lfs merge=lfs -text
