--- a/.gitignore
+++ b/.gitignore
@@ -125,6 +125,9 @@ installation_success.log
 LOG.md
 # Moltbook artifacts
 data/moltbook/
+# Consciousness protocol runtime artifacts
+data/consciousness/
+reports/consciousness/
 # Eidos MCP screenshots
 eidos_mcp/*.png
 # Local backup snapshots (keep out of repo)
