--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,17 +59,35 @@ jobs:
         name: 🔍 Check what to run
         run: |
           echo "should_run=true" >> $GITHUB_OUTPUT
-          
+
+          # Resolve a reliable diff base for both push and pull_request events.
+          if [ "${{ github.event_name }}" = "pull_request" ]; then
+            BASE_SHA="${{ github.event.pull_request.base.sha }}"
+          elif [ -n "${{ github.event.before }}" ] && [ "${{ github.event.before }}" != "0000000000000000000000000000000000000000" ]; then
+            BASE_SHA="${{ github.event.before }}"
+          else
+            BASE_SHA=""
+          fi
+
+          if [ -n "$BASE_SHA" ]; then
+            CHANGED_FILES="$(git diff --name-only "$BASE_SHA" "${{ github.sha }}" || true)"
+          else
+            # Fallback for workflow_dispatch/initial commits where diff-base is unavailable.
+            CHANGED_FILES="$(git ls-files)"
+          fi
+
+          printf "%s\n" "$CHANGED_FILES" > changed_files.txt
+
           # Check if Python files changed
-          if git diff --name-only HEAD~1 2>/dev/null | grep -q '\.py$' || [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
+          if grep -qE '\.py$' changed_files.txt || [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
             echo "has_python=true" >> $GITHUB_OUTPUT
             echo "::notice::Python files detected"
           else
             echo "has_python=false" >> $GITHUB_OUTPUT
           fi
-          
+
           # Check if TypeScript/JavaScript files changed
-          if git diff --name-only HEAD~1 2>/dev/null | grep -qE '\.(ts|tsx|js|jsx)$' || [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
+          if grep -qE '\.(ts|tsx|js|jsx)$' changed_files.txt || [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
             echo "has_typescript=true" >> $GITHUB_OUTPUT
             echo "::notice::TypeScript/JavaScript files detected"
           else
@@ -100,7 +118,6 @@ jobs:
 
       - name: 🎨 Check Python formatting
         if: needs.validate.outputs.has_python == 'true'
-        continue-on-error: true
         id: python_format
         run: |
           echo "::group::Black format check"
@@ -231,21 +248,21 @@ jobs:
         shell: bash
 
       - name: 🔍 Run tests
-        continue-on-error: true
         run: |
           echo "::group::Running pytest"
           if command -v pytest >/dev/null 2>&1; then
-            # Run pytest - allow it to pass even if no tests are collected or some fail due to missing dependencies
-            pytest --cov=. --cov-report=xml --cov-report=term-missing -v || {
-              EXIT_CODE=$?
-              if [ $EXIT_CODE -eq 5 ]; then
-                echo "::notice::No tests were collected - this is expected for a monorepo without root tests"
-                exit 0
-              else
-                echo "::warning::Some tests failed - this may be due to missing module-specific dependencies"
-                exit 0
-              fi
-            }
+            set +e
+            pytest --cov=. --cov-report=xml --cov-report=term-missing -v
+            EXIT_CODE=$?
+            set -e
+            if [ $EXIT_CODE -eq 5 ]; then
+              echo "::notice::No tests were collected - this is expected for a monorepo without root tests"
+              exit 0
+            fi
+            if [ $EXIT_CODE -ne 0 ]; then
+              echo "::error::Pytest failed with exit code $EXIT_CODE"
+              exit $EXIT_CODE
+            fi
           else
             echo "::error::pytest not found"
             exit 1
@@ -347,7 +364,10 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: docs-${{ github.sha }}
-          path: docs/_build/html || _build/html
+          path: |
+            docs/_build/html
+            _build/html
+          if-no-files-found: warn
           retention-days: 7
 
   build:
@@ -355,6 +375,8 @@ jobs:
     needs: [validate, test]
     if: always() && needs.validate.outputs.should_run == 'true'
     runs-on: ubuntu-latest
+    outputs:
+      has_wheel: ${{ steps.package_meta.outputs.has_wheel }}
     permissions:
       contents: read  # Only reading repository contents
     steps:
@@ -404,6 +426,17 @@ jobs:
             echo "::warning::No dist directory found"
           fi
 
+      - name: 🔎 Detect built wheel
+        id: package_meta
+        run: |
+          if find dist -maxdepth 1 -type f -name '*.whl' | grep -q .; then
+            echo "has_wheel=true" >> $GITHUB_OUTPUT
+            echo "::notice::Wheel artifact detected"
+          else
+            echo "has_wheel=false" >> $GITHUB_OUTPUT
+            echo "::notice::No wheel artifact detected; integration install test will be skipped"
+          fi
+
       - name: 📤 Upload artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -414,7 +447,7 @@ jobs:
   integration:
     name: 🧩 Integration
     needs: [validate, build]
-    if: github.event_name == 'push' && needs.validate.outputs.should_run == 'true'
+    if: github.event_name == 'push' && needs.validate.outputs.should_run == 'true' && needs.build.outputs.has_wheel == 'true'
     runs-on: ubuntu-latest
     permissions:
       contents: read  # Only reading repository contents
@@ -466,12 +499,26 @@ jobs:
       - name: 📊 Pipeline Status
         run: |
           FAILED_JOBS=()
+          LINT_RESULT="${{ needs.lint.result }}"
+          TEST_RESULT="${{ needs.test.result }}"
+          TS_RESULT="${{ needs.test-typescript.result }}"
+          DOCS_RESULT="${{ needs.docs.result }}"
+          BUILD_RESULT="${{ needs.build.result }}"
+          INTEGRATION_RESULT="${{ needs.integration.result }}"
 
           # Check each job result
-          for job in lint test test-typescript docs build integration; do
-            RESULT="${{ needs[format('{0}', job)].result }}"
-            if [ "$RESULT" == "failure" ]; then
-              FAILED_JOBS+=("$job")
+          for item in \
+            "lint:${LINT_RESULT}" \
+            "test:${TEST_RESULT}" \
+            "test-typescript:${TS_RESULT}" \
+            "docs:${DOCS_RESULT}" \
+            "build:${BUILD_RESULT}" \
+            "integration:${INTEGRATION_RESULT}"
+          do
+            JOB_NAME="${item%%:*}"
+            JOB_RESULT="${item##*:}"
+            if [ "$JOB_RESULT" = "failure" ] || [ "$JOB_RESULT" = "cancelled" ]; then
+              FAILED_JOBS+=("$JOB_NAME")
             fi
           done
 
