--- a/.gitignore
+++ b/.gitignore
@@ -133,6 +133,7 @@ reports/consciousness_benchmarks/benchmark_*.json
 reports/consciousness_trials/trial_*.json
 reports/consciousness_integrated_benchmarks/integrated_*.json
 reports/mcp_audit_*.json
+reports/security/
 # Local runtime state snapshots/checkpoints
 state/
 # Eidos MCP screenshots
